Fix anchor overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,6 +40,9 @@ h4 {
 p {
   font-family: "Work Sans", sans-serif;
 }
+a {
+  overflow-wrap: break-word;
+}
 
 .text-center {
 	text-align: center;
